--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-
-    
+    <header class="header">
+        <h1 class="name">Laura Walters</h1>
+    </header>
+    <nav class="nav-bar">
+        <ul class="nav-list">
+            <li class="nav-link-left">About</li>
+            <li class="nav-link-center">Applications</li>
+            <li class="nav-link-right">Contact</li>
+        </ul>
+    </nav>
     
 </body>
 </html>
