--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li class="nav-link-right">Contact</li>
         </ul>
     </nav>
+    <div class="showcase">
+        <img src="./images/9D959982-7420-4912-80DE-1E53FB7F672D_1_105_c.jpeg" alt="Laura Walters" width="400px" height="auto">
+    </div>
     
 </body>
 </html>
