--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <div class="showcase">
         <img src="./images/9D959982-7420-4912-80DE-1E53FB7F672D_1_105_c.jpeg" alt="Laura Walters" width="400px" height="auto">
     </div>
-    
+    <footer class="footer"><h3>&copy;Laura</h3></footer>
 </body>
 </html>
