Creating deployed application cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
     <section class="applications">
         <h2>Applications</h2>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam nam est aspernatur sequi facere pariatur sapiente eaque totam veritatis, autem quae facilis eligendi molestiae impedit tempore. Unde dignissimos soluta eveniet.</p>
+        <br>
+        <br>
+        <div class="app-grid">
+            <div app1>
+            <div class="card1"><p>Horiseon: debugging project</p></div>
+            </div>
+            <div class="app23">
+            <div class="card2 card"><p>Coming Soon...</p></div>
+            <div class="card3 card"><p>Coming Soon...</p></div>
+            <div class="card4 card"><p>Coming Soon...</p></div>
+            <div class="card5 card"><p>Coming Soon...</p></div>
+            </div>
+        </div>
     </section>
     
     <section class="contact">
