styling deployed applications

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <br>
         <div class="app-grid">
             <div app1>
-            <div class="card1"><p>Horiseon: debugging project</p></div>
+            <div class="card1"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" alt="Horison" width="100%" height="100%"><p>Horiseon: debugging project</p></div>
             </div>
             <div class="app23">
-            <div class="card2 card"><p>Coming Soon...</p></div>
-            <div class="card3 card"><p>Coming Soon...</p></div>
-            <div class="card4 card"><p>Coming Soon...</p></div>
-            <div class="card5 card"><p>Coming Soon...</p></div>
+            <div class="card2 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p>Coming Soon...</p></div>
+            <div class="card3 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p>Coming Soon...</p></div>
+            <div class="card4 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p>Coming Soon...</p></div>
+            <div class="card5 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p>Coming Soon...</p></div>
             </div>
         </div>
     </section>
