--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <br>
         <br>
         <div class="app-grid">
-            <div app1>
-            <div class="card1"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" alt="Horison" width="100%" height="100%"><p></p></div>
+            <div class= "app1">
+            <div class="card1"><img src="./images/undraw_web_search_re_efla.svg" alt="Horison" width="100%" height="100%"><p></p></div>
             </div>
             <div class="app23">
-            <div class="card2 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p></p></div>
-            <div class="card3 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p></p></div>
-            <div class="card4 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p></p></div>
-            <div class="card5 card"><img src="./images/derek-story-840Mgehu3Mw-unsplash.jpg" width="100%" height="100%"><p></p></div>
+            <div class="card2 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><p></p></div>
+            <div class="card3 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><p></p></div>
+            <div class="card4 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><p></p></div>
+            <div class="card5 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><p></p></div>
             </div>
         </div>
     </section>
