--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </div>
             
             <div class="app23">
-            <div class="card2 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href=""></a>Coming Soon!</button></div>
-            <div class="card3 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href=""></a>Coming Soon!</button></div>
-            <div class="card4 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href=""></a>Coming Soon!</button></div>
-            <div class="card5 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href=""></a>Coming Soon!</button></div>
+            <div class="card2 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+            <div class="card3 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+            <div class="card4 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+            <div class="card5 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
             </div>
         </div>
     </section>
