--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <br>
             <div class="info">
                 <div class="info-item"><i class="fab fa-github"></i><span> laurawalters1</span></div>
-            <div class="info-item"><i class="fas fa-at"></i><span> lauraewalters1098@gmail.com</span></div>
+            <div class="info-item"><i class="fas fa-at"></i><span><a class="email" href="mailto:lauraewalters1098@gmail.com" target="blank">lauraewalters1098@gmail.com</a></span></div>
             
             <div class="info-item"><i class="fab fa-linkedin"></i><span> laurawalters1</span></div>
             </div>
