--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <p>Below I have provided my contact information, including my github username, professional email address, and linkedin username, respectively. Please do not hesitate to contact me with any enquiries.</p>
             <br>
             <div class="info">
-                <div class="info-item"><i class="fab fa-github"></i><span> laurawalters1</span></div>
-            <div class="info-item"><i class="fas fa-at"></i><span><a class="email" href="mailto:lauraewalters1098@gmail.com" target="blank">lauraewalters1098@gmail.com</a></span></div>
+                <div class="info-item"><span><a href="" class="contact-link"><i class="fab fa-github"></i>   laurawalters1</a></span></div>
+            <div class="info-item"></i><span><a class="contact-link" href="mailto:lauraewalters1098@gmail.com" target="blank"><i class="fas fa-at"></i>   lauraewalters1098@gmail.com</a></span></div>
             
-            <div class="info-item"><i class="fab fa-linkedin"></i><span> laurawalters1</span></div>
+            <div class="info-item"><!--<i class="fab fa-linkedin"></i>--><span><a href="" class="contact-link"><i class="fab fa-linkedin"></i>   laurawalters1</a></span></div> 
             </div>
         </section>
         </main>
