--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <nav class="nav-bar">
         <ul class="nav-list">
-            <li class="nav-link-left"><a href="#about">About</a></li>
-            <li class="nav-link-center"><a href="#applications">Applications</a></li>
-            <li class="nav-link-right"><a href="#contact">Contact</a></li>
+            <li id="nav-link-left"><a href="#about">About</a></li>
+            <li id="nav-link-center"><a href="#applications">Applications</a></li>
+            <li id="nav-link-right"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <main>
@@ -42,14 +42,14 @@
         <br>
         <div class="app-grid">
             <div class= "app1">
-                <div class="card1"><img src="./images/undraw_web_search_re_efla.svg" alt="Horison" width="100%" height="100%"><a href="https://laurawalters1.github.io/week_1-homework/" target="blank"><button class="card-button">HoriSEOn</button></a></div>
+                <div id="card1"><img src="./images/undraw_web_search_re_efla.svg" alt="Horison" width="100%" height="100%"><button class="card-button"><a href="https://laurawalters1.github.io/week_1-homework/" target="blank">HoriSEOn</button></a></div>
             </div>
             
             <section class="app23">
-                <div class="card2 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
-                <div class="card3 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
-                <div class="card4 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
-                <div class="card5 card"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+                <div class="card" id="card2"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+                <div class="card" id="card3"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+                <div class="card" id="card4"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+                <div class="card" id="card5"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
             </section>
         </div>
     </section>
@@ -63,7 +63,7 @@
                 <div class="info-item"><span><a href="" class="contact-link"><i class="fab fa-github"></i>   laurawalters1</a></span></div>
             <div class="info-item"></i><span><a class="contact-link" href="mailto:lauraewalters1098@gmail.com" target="blank"><i class="fas fa-at"></i>   lauraewalters1098@gmail.com</a></span></div>
             
-            <div class="info-item"><!--<i class="fab fa-linkedin"></i>--><span><a href="" class="contact-link"><i class="fab fa-linkedin"></i>   laurawalters1</a></span></div> 
+            <div class="info-item"><span><a href="" class="contact-link"><i class="fab fa-linkedin"></i>   laurawalters1</a></span></div> 
             </div>
         </section>
         </main>
