commenting and removing overscroll

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -60,10 +61,10 @@
         <p>Below I have provided my contact information, including my github username, professional email address, and linkedin username, respectively. Please do not hesitate to contact me with any enquiries.</p>
             <br>
             <div class="info">
-                <div class="info-item"><span><a href="" class="contact-link"><i class="fab fa-github"></i>   laurawalters1</a></span></div>
+                <div class="info-item"><span><a href="https://github.com/laurawalters1" target="blank" class="contact-link"><i class="fab fa-github"></i>   laurawalters1</a></span></div>
             <div class="info-item"></i><span><a class="contact-link" href="mailto:lauraewalters1098@gmail.com" target="blank"><i class="fas fa-at"></i>   lauraewalters1098@gmail.com</a></span></div>
             
-            <div class="info-item"><span><a href="" class="contact-link"><i class="fab fa-linkedin"></i>   laurawalters1</a></span></div> 
+            <div class="info-item"><span><a href="https://www.linkedin.com/in/laura-walters-099137215/" target="blank" class="contact-link"><i class="fab fa-linkedin"></i>   laura walters</a></span></div> 
             </div>
         </section>
         </main>
