--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <br>
         <div class="app-grid">
             <div class= "app1">
-                <div id="card1"><img src="./images/undraw_web_search_re_efla.svg" alt="woman with magnifying glass over web page" width="100%" height="100%"><button class="card-button"><a href="https://laurawalters1.github.io/week_1-homework/" target="blank">HoriSEOn</button></a></div>
+                <div id="card1"><img src="./images/macroMeals.png" alt="woman with magnifying glass over web page" width="100%" height="100%"><button class="card-button"><a href="https://bavkudhail.github.io/meal-planner-project-1/" target="blank">Macro Meals</button></a></div>
             </div>
             
             <section class="app23">
-                <div class="card" id="card2"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
-                <div class="card" id="card3"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
+                <div class="card" id="card2"><img src="./images/weatherDash.png" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="https://laurawalters1.github.io/Weather-Dashboard/">Weather Dash</button></a></div>
+                <div class="card" id="card3"><img src="./images/dayPlanner.png" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="https://laurawalters1.github.io/Day-Planner/">Day Planner</button></a></div>
                 <div class="card" id="card4"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
                 <div class="card" id="card5"><img src="./images/undraw_pair_programming_re_or4x.svg" width="100%" height="100%" alt="two people coding"><button class="card-button"><a href="comingsoon.html">Coming Soon!</button></a></div>
             </section>
